--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
+    "form-data": "^4.0.0",
     "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0",
     "supertest": "^6.2.1"
