--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=development&&nodemon app",
-    "test": "SET NODE_ENV=test&&jest --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand"
+    "test": "SET NODE_ENV=test&&jest --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "sequelize": "^6.13.0",
+    "socket.io": "^4.4.1",
     "supertest": "^6.2.1"
   },
   "devDependencies": {
