wiring login, register, adjusting protectedRoute, and add sweetAlert

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "",
     "password": "postgres",
     "database": "MyRecipesDB",
     "host": "localhost",
