--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=development&&nodemon ./bin/www",
-    "test": "SET NODE_ENV=test&&jest --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand"
+    "test": "SET NODE_ENV=test&&jest --coverage --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand"
   },
   "keywords": [],
   "author": "",
