--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "daisyui": "^1.24.3",
     "json-server": "^0.17.0",
+    "midtrans-client": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
