--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=development&&nodemon ./bin/www",
+    "dev": "SET NODE_ENV=development&&nodemon ./server.js",
     "test": "SET NODE_ENV=test&&jest --coverage --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "pg": "^8.7.1",
     "sequelize": "^6.13.0",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "supertest": "^6.2.1"
   },
   "devDependencies": {
