--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "dev": "SET NODE_ENV=development&&nodemon ./server.js",
     "test": "SET NODE_ENV=test&&jest --coverage --watchAll --detectOpenHandles --forceExit --detectOpenHandles --runInBand"
   },
