--- a/server/config/config.json
+++ b/server/config/config.json
@@ -11,7 +11,8 @@
     "password": "postgres",
     "database": "MyRecipesDB-test",
     "host": "localhost",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
